--- a/DocumentLicenta/References.bib
+++ b/DocumentLicenta/References.bib
@@ -73,38 +73,33 @@ publisher = {O’Reilly Media, Inc.},
 edition = {1st}
 }
 
-
 @misc{2020EC2,
+  key={z1},
   title={Amazon EC2 description},
-  year={2020},
-  month={04},
-  day={25},
-  URL = {https://aws.amazon.com/ec2/}
+  note = {Accesat la data de : 25-04-2020},
+  howpublished = {\url{https://aws.amazon.com/ec2/},}  
 }
 
 
 @misc{2020S3,
+  key={z2},
   title={Amazon S3 description},
-  year={2020},
-  month={04},
-  day={25},
-  URL = {https://aws.amazon.com/s3/}
+  note = {Accesat la data de : 25-04-2020},
+  howpublished = {\url{https://aws.amazon.com/s3/}}.
 }
 
 @misc{2020autoscaling,
+  key={z3},
   title={Amazon autoscaling description},
-  year={2020},
-  month={04},
-  day={25},
-  URL = {https://aws.amazon.com/autoscaling/}
+  note = {Accesat la data de : 25-04-2020},
+  howpublished = {\url{https://aws.amazon.com/autoscaling/}},
 }
 
 @misc{2020elb,
+  key={z4},
   title={Amazon elastic load balancing description},
-  year={2020},
-  month={04},
-  day={25},
-  URL = {https://aws.amazon.com/elasticloadbalancing/}
+  note = {Accesat la data de : 25-04-2020},
+  howpublished = {\url{https://aws.amazon.com/elasticloadbalancing/}},
 }
 
 @book{adam2017,
